# himawari_api

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
dev/: dev_animation.py  dev_code.py  dev_find_files.py  download_Himawari.py  imports.py  read_Himawari_HSD_BZ2_data.py
himawari_api/: __init__.py  ahi_utils.py  alias.py  checks.py  download.py  explore.py  filter.py  info.py  io.py  listing.py  query.py  search.py
himawari_api/utils/: time.py
tutorials/: 00_download_and_find_files.py  01_download_utility.py  01_find_utility.py  02_query_fpaths.py  03_read_ahi_rad_data_with_satpy.py  03_read_ahi_rad_nrt_data_with_satpy.py  03_read_cloud_bucket_data.py  03_read_cloud_bucket_data_with_satpy.py  05_ahi_true_color_animation_with_satpy.py  05_mesoscale_animation_with_satpy.py  06_ahi_bands_mosaic_with_satpy.py  06_mosaic_ABI_bands_with_satpy.py
tutorials/Others/: ex_ACHA.py  ex_ACHT.py  ex_ACM.py  ex_ACTP.py  ex_CHGT.py  ex_CMSK.py  ex_COD.py  ex_CPHS.py  ex_CPS.py  ex_CTP.py  ex_DSI.py  ex_LVMP.py  ex_LVTP.py  ex_RRQPE.py  ex_TPW.py  plot_ABI_with_netCDF.py  plot_ABI_with_xarray.py
